src/test/deca/context/valid/declare-class-herite-object.deca
// Description:
//    déclare une nouvelle classe qui hérite de Object explicitement
//
// Resultats:
//
//
// Historique:
//    cree le 13/01/2023

class A extends Object {}