src/test/deca/context/invalid/cast-not-subtype.deca
// Description:
//    Cast d'une classe vers une autre qui n'est pas une sous-classe
//
// Resultats:
//    Ligne 20: B n'est pas une sous classe de A
//
// Historique:
//    cree le 06/01/2023

class A{

}

class B{

}

{
    A a;
    (B)(a);
}